--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -25,18 +25,9 @@ const content = {
 };
 const currentUrl = SITE.homePage + currentPage;
 
-// 或者下一篇文章
-const posts = await Astro.glob('../pages/posts/*.md');
-const allPosts = sortPosts(posts);
-const postIndex = getIndex(currentPage);
-let nextUrl = '';
-if (postIndex > 2) {
-  nextUrl = allPosts[allPosts.length - postIndex + 1].url;
-}
-let prevUrl = '';
-if (postIndex < allPosts.length) {
-  prevUrl = allPosts[allPosts.length - postIndex - 1].url;
-}
+// 随机下一篇文章
+const allPosts = await Astro.glob('../pages/posts/*.md');
+let nextUrl = allPosts[Math.floor(Math.random() * allPosts.length)].url;
 ---
 
 <html lang="ch">
@@ -186,46 +177,18 @@ if (postIndex < allPosts.length) {
           <div
             class="flex justify-between md:flex-row flex-col mt-2 post-footer"
           >
-            <div class="text-black">
-              发布日期：<a
-                href={`https://github.com/${SITE.repo}/tree/main/src/pages${url}.md`}
-                target="_blank"
-                title="Edit">{date}</a
-              >
-            </div>
             <div class="md:mt-0 mt-4">
               {nextUrl ? <a href={nextUrl}>下一篇 |</a> : null}
-              {prevUrl ? <a href={prevUrl}>上一篇 |</a> : null}
-              <a href="/">去首页 |</a>
-              <a
-                href={`https://twitter.com/${SITE.twitterId}`}
-                target="_blank"
-                title="Follow">Twitter</a
-              >
-              <a
-                href={`https://github.com/${SITE.githubId}/weekly`}
-                title="Star"
-                target="_blank"
-                class="lg:inline-block hidden"
-              >
-                | Github</a
-              >
-              <a
-                href="/rss.xml"
-                title="Subscribe"
-                class="xl:inline-block hidden"
-              >
-                | RSS</a
-              >
+              <a href="/">去首页</a>
             </div>
           </div>
         </div>
         <script
           src="https://giscus.app/client.js"
           data-repo={SITE.repo}
-          data-repo-id="R_kgDOG4TsQA"
+          data-repo-id={SITE.gitcusRepoId}
           data-category="General"
-          data-category-id="DIC_kwDOG4TsQM4CR4bV"
+          data-category-id={SITE.gitcusCategoryId}
           data-mapping="title"
           data-strict="0"
           data-reactions-enabled="1"
