--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -16,3 +16,10 @@ const {icon} =SITE;
 
 <link rel="stylesheet" href="https://gw.alipayobjects.com/os/k/webfont/style.css" rel="preload" as="font">
 
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script> 
